update ExcelReaderUtils.java